# personal_assistant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-17-testing-plan.md
docs/superpowers/specs/: 2026-05-17-testing-plan-design.md
src/: utils.py
src/assistant/: .gcloudignore  .gitignore  .mise.toml  Dockerfile  requirements.txt  runner.py  telemetry.py
src/assistant/agents/: root_orchestrator.py  trivial_agent.py
src/assistant/api/: main.py
src/assistant/db/: bq_client.py
src/assistant/frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src/assistant/memory/: __init__.py  callbacks.py  cross_domain.py  firestore_session_service.py  patterns.py  service.py  user_profile.py
src/assistant/prompts/: loader.py  root_orchestrator.md  trivial.md
src/fitness_tracker/: .dockerignore  .mise.toml  Dockerfile  README.md  create_bigquery_table.py  requirements.txt  rxconfig.py  start.sh
src/meal_hour/: .dockerignore  .mise.toml  Dockerfile  README.md  requirements.txt  rxconfig.py  start.sh
src/meal_hour/app/: app.py
tests/: agent.py  conftest.py  test.ipynb
tests/.adk/: session.db
tests/e2e/: calendar.spec.ts  chat.spec.ts  session.spec.ts  tasks.spec.ts
tests/fixtures/: events.py  memory.py  tasks.py  users.py
tests/integration/: test_calendar_api.py  test_chat_api.py  test_routing_logic.py  test_session_api.py  test_tasks_api.py
tests/llm_eval/: conftest.py  test_agent_routing.py  test_agent_tools.py  test_skill_quality.py
(+131 files in other folders)
